# aap-core

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  PLUGIN_FIRST_STEP_GUIDE.md  README.md  asan-wrap-bugfixed.sh  build.gradle.kts  clean-asan-for-debugging.sh  common.gradle  gradle.properties  import-lv2-deps.sh  index.html  native  navigation.html  publish-pom.gradle  settings.gradle  setup-asan-for-debugging.sh  update-binder.sh
androidaudioplugin-js-controller/src/main/cpp/: AapJsControllerRuntime.cpp  AapJsControllerRuntime.h  CMakeLists.txt  JNI.cpp
androidaudioplugin-manager/src/main/cpp/: AAPMidiEventTranslator.cpp  AAPMidiEventTranslator.h  AndroidAudioProcessor.h  AndroidAudioProcessorPAL.cpp  AndroidAudioProcessorPAL.h  AudioBuffer.cpp  AudioBuffer.h  AudioData.cpp  AudioData.h  AudioDevice.cpp  AudioDevice.h  AudioDeviceManager.cpp  AudioDeviceManager.h  AudioGraph.cpp  AudioGraph.h  AudioGraphNode.AudioDevice.cpp  AudioGraphNode.DataSource.cpp  AudioGraphNode.Midi.cpp  AudioGraphNode.Plugin.cpp  AudioGraphNode.cpp  AudioGraphNode.h  AudioProcessor.cpp  AudioProcessor.h  AudioProcessorPAL.cpp  AudioProcessorPAL.h  CMakeLists.txt  JNI.cpp  LocalDefinitions.h  OboeAudioDeviceManager.cpp  OboeAudioDeviceManager.h  PluginPlayer.cpp  PluginPlayer.h  PluginPlayerConfiguration.cpp  PluginPlayerConfiguration.h  VirtualAudioDeviceManager.cpp  VirtualAudioDeviceManager.h  androidaudioplugin_manager.h  include_cmidi2.h  plugin-player.cpp  plugin-player.h
androidaudioplugin-midi-device-service/src/main/cpp/: AAPMidiCISession.cpp  AAPMidiCISession.h  AAPMidiProcessor.cpp  AAPMidiProcessor.h  AAPMidiProcessor_android.cpp  AAPMidiProcessor_android.h  CMakeLists.txt  aapmidideviceservice-jni.cpp
androidaudioplugin/src/main/cpp/: CMakeLists.txt
java/androidaudioplugin-samples-host-engine/: CMakeLists.txt  build.gradle
java/androidaudioplugin-samples-host-engine/src/main/: AndroidManifest.xml
java/samples/aapbarebonepluginsample/: CMakeLists.txt  build.gradle  build.gradle.kts
java/samples/aaphostsample/: CMakeLists.txt  build.gradle  build.gradle.kts
native/: .gitignore  AudioPluginInterfaceImpl_8h_source.html  CMakeLists.txt  aap-midi2_8h_source.html  android-application-context_8h_source.html  annotated.html  audio-plugin-host-android_8h_source.html  audio-plugin-host-desktop_8h_source.html  audio-plugin-host_8h_source.html  classAAPClientContext-members.html  classAAPClientContext.html  classAAPClientContext__coll__graph.map  classAAPClientContext__coll__graph.md5  classDesktopClientContext-members.html  classDesktopClientContext.html  classDesktopClientContext__coll__graph.map  classDesktopClientContext__coll__graph.md5  classaap_1_1AudioPluginInterfaceImpl-members.html  classaap_1_1AudioPluginInterfaceImpl.html  classaap_1_1AudioPluginInterfaceImpl__coll__graph.md5  classaap_1_1AudioPluginInterfaceImpl__inherit__graph.map  classaap_1_1GenericDesktopPluginHostPAL-members.html  classaap_1_1GenericDesktopPluginHostPAL.html  classaap_1_1GenericDesktopPluginHostPAL__coll__graph.map  classaap_1_1GenericDesktopPluginHostPAL__coll__graph.md5  classaap_1_1MidiCIExtension-members.html  classaap_1_1MidiCIExtension.html  classaap_1_1PluginExtension-members.html  classaap_1_1PluginExtension.html  classaap_1_1PluginHost-members.html  classaap_1_1PluginHost.html  classaap_1_1PluginHostManager-members.html  classaap_1_1PluginHostManager.html  classaap_1_1PluginHostPAL-members.html  classaap_1_1PluginHostPAL.html  classaap_1_1PluginHostPAL__inherit__graph.map  classaap_1_1PluginHostPAL__inherit__graph.md5  classaap_1_1PluginInformation-members.html  classaap_1_1PluginInformation.html  classaap_1_1PluginInstance-members.html  (+50 more)
native/aap/: CMakeLists.txt
native/aap-android/: CMakeLists.txt  Makefile
native/aap-android/src/: android-audio-plugin-client-bridge.cpp
native/aap-juce/: .gitignore  android-audio-plugin-framework.jucer  build.sh
native/aap-lv2/src/: android-audio-plugin-lv2-bridge.cpp
native/aap/include/: android-audio-plugin-host.hpp
native/aap/include/aap/: android-audio-plugin-host.hpp
native/aap/src/: android-audio-plugin-host.cpp  android-audio-plugin-local-bridge.cpp
native/aap/test/: dogfoodingaap.cpp
native/android/src/: AudioPluginHost_native.cpp  AudioPluginInterfaceImpl.h  android-audio-plugin-client-bridge.cpp
native/androidaudioplugin/: CMakeLists.txt
native/androidaudioplugin-lv2/: CMakeLists.txt
native/androidaudioplugin-lv2/src/: AudioPluginLV2LocalHost_native.cpp  android-audio-plugin-lv2-bridge.cpp
native/androidaudioplugin/android/src/: AudioPluginHost_native.cpp  AudioPluginInterfaceImpl.h  AudioPluginNatives_jni.cpp  android-application-context.cpp  android-audio-plugin-client-bridge.cpp  android-audio-plugin-host-android.hpp  android-context.cpp  (+4 more)
native/androidaudioplugin/core/: old-CMakeLists.txt
native/core/src/: android-audio-plugin-host.cpp  android-audio-plugin-local-bridge.cpp
native/juce/: .gitignore  LICENSE  README.md  android-audio-plugin-framework.jucer  build-sample.sh  build.sh  fixup-project.sh  project-override.build.gradle  sample-project-settings.gradle
native/juce/Source/: HostStartup.cpp  juce_android_audio_plugin_format.cpp  test.cpp
native/juce/samples/: sample-project.settings.gradle
native/juce/tools/: aap-metadata-generator.cpp
native/lv2/: old-CMakeLists.txt
native/lv2/src/: AudioPluginLV2LocalHost_native.cpp  android-audio-plugin-lv2-bridge.cpp
native/samples/: AAPSampleLV2Interop_desktop.cpp  AAPSampleLV2Interop_native.cpp  CMakeLists.txt
native/samples/aapbarebonepluginsample/: CMakeLists.txt  aap_metadata.xml  aapbarebonepluginsample.cpp
native/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  searchdata.js
native/tools/aap-info/: CMakeLists.txt  aap-info.cpp
native/tools/aap-list/: CMakeLists.txt  aap-list.cpp
poc-samples/AAPHostSample/app/: CMakeLists.txt  build.gradle
tools/aap-import-lv2-metadata/: CMakeLists.txt  aap-import-lv2-metadata.cpp
(+1375 files in other folders)
